[gd_scene load_steps=2 format=3 uid="uid://defeatscreen001"]

[ext_resource type="Script" path="res://scripts/DefeatScreen.gd" id="1"]

[node name="DefeatScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.02, 0.02, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "RACE OVER"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Better luck next time!"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "TRY AGAIN"

[node name="MenuButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "MAIN MENU"

[node name="CloseButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "QUIT"